# Cabinet_hsh64

./: .gitignore  Cargo.toml  README.md
examples/: benchmark_ensemble_hsh64.rs  benchmark_pure_hsh64.rs
scripts/: _eval_deep_hash.py  _fast_ensemble_search.py  _postprocess_pipeline.py  _train_code_distillation.py  benchmark_pure_hsh64.py  check_cache_vocab.py  compare_vocab.py  debug_recall.py  end_to_end_test.py  ensemble_eval.py  ensemble_fusion_search.py  ensemble_rank_search.py  ensemble_rank_search_2.py  ensemble_weight_search_fast.py  explore_bits_pca.py  generate_embeddings.py  generate_reranker_embeddings_64.py  post_optimize_codes_64.py  post_optimize_codes_recall_64.py  post_optimize_codes_recall_64_v2.py  train_deep_hash_v3_64.py  train_pca_64.py
src/: deep_hash.rs  embedding.rs  encoder.rs  error.rs  hsh64.rs  lib.rs  mih_index.rs  pca.rs  perfect_hash.rs  pos_map.rs
tests/: end_to_end.rs
tests/data/: bench_vocab.txt  hsh64_recall_search_results.json  vocab.txt  vocab_3109.txt  vocab_small.txt
