[package]
name = "hsh64"
version = "0.1.0"
edition = "2021"
authors = ["HSH Contributors"]
description = "64-bit semantic hashing extension (feat4 + sim52 + abs8) for HSH"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Sauomore/Cabinet_hsh64"

[dependencies]
anyhow = "1.0"
byteorder = "1.5"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
